test/expected/glob_unmatched_is_error.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "a*.zzznomatch"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "a*.zzznomatch"
]
shit: 2:6: error: the glob pattern 'a*.zzznomatch' matched no file, it expands to its literal text, which is rarely intended. Probe for matches with compgen -G 'a*.zzznomatch' or relax with set +o failglob.
     2 |  echo a*.zzznomatch
       |       ^~~~~~~~~~~~~ here.
